--- a/index.HtmL
+++ b/index.HtmL
@@ -54,6 +54,28 @@
             padding: 20px;
             margin-top: 40px;
         }
+        form {
+            display: flex;
+            flex-direction: column;
+            max-width: 400px;
+            margin: 0 auto;
+            gap: 15px;
+        }
+        input, textarea {
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 1em;
+        }
+        button {
+            padding: 10px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-weight: bold;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -67,7 +89,9 @@
         <a href="#about">من نحن</a>
         <a href="#tools">أدوات رقمية</a>
         <a href="#freelance">فرص العمل الحر</a>
+        <a href="#signup">إنشاء حساب</a>
         <a href="#contact">تواصل معنا</a>
+        <a href="#payment">الدفع</a>
     </nav>
 
     <section id="about">
@@ -88,7 +112,40 @@
     <section class="cta">
         <h2>ابدأ رحلتك الآن</h2>
         <p>انضم لآلاف الشباب اللي بدأوا طريقهم الحر مع DigitalForsa</p>
-        <a href="#">انضم الآن</a>
+        <a href="#signup">انضم الآن</a>
+    </section>
+
+    <section id="payment">
+        <h2>طرق الدفع</h2>
+        <p>جرب الدفع التجريبي باستخدام أحد الأزرار التالية:</p>
+        <form action="https://buy.stripe.com/test_dR6aGC2Nz5oC0lG5kl" method="GET" target="_blank">
+            <button type="submit">ادفع عبر Stripe (تجريبي)</button>
+        </form>
+        <br>
+        <form action="https://www.paypal.com/paypalme/faresmohamed38" method="GET" target="_blank">
+            <button type="submit">ادفع عبر PayPal</button>
+        </form>
+        <p><small>ستُفتح صفحة الدفع على موقع خارجي (Stripe أو PayPal).</small></p>
+    </section>
+
+    <section id="signup">
+        <h2>إنشاء حساب جديد</h2>
+        <form>
+            <input type="text" placeholder="الاسم الكامل" required>
+            <input type="email" placeholder="البريد الإلكتروني" required>
+            <input type="password" placeholder="كلمة المرور" required>
+            <button type="submit">تسجيل</button>
+        </form>
+    </section>
+
+    <section id="contact">
+        <h2>تواصل معنا</h2>
+        <form>
+            <input type="text" placeholder="اسمك الكامل" required>
+            <input type="email" placeholder="بريدك الإلكتروني" required>
+            <textarea placeholder="رسالتك" rows="4" required></textarea>
+            <button type="submit">إرسال</button>
+        </form>
     </section>
 
     <footer>
@@ -96,4 +153,4 @@
     </footer>
 </body>
 </html>
-A_logo_for_"DigitalForsa"_is_displayed_on_a_white_.png
+update the home page
